# MiniR

./: CMakeLists.txt  README  dpq.jl  ref.jl  test_toms708.jl  toms708.jl
include/: .Rmath.h.swp  .nmath.h.swp  Random.h  Rmath.h  acmtoms.h  base.h  basedist.h  binomial.h  dpq.h  infnan.h  nmath.h  nmath2.h  normal.h  randist.h  regression.h  specfun.h  statistics.h
include/Random/: rng.h
include/Rmath/: config.h  nmath.h
src/: .dnorm.cpp.swp  CMakeLists.txt  MiniR.cpp  RNG.cpp  acmtoms.cpp  base.cpp  basedist.cpp  bd0.cpp  beta_randist.cpp  beta_specfun.cpp  binomial.cpp  cauchy.cpp  chebyshev.cpp  chisq.cpp  choose.cpp  cospi.cpp  d1mach.cpp  dbeta.cpp  dbinom.cpp  dcauchy.cpp  dchisq.cpp  dexp.cpp  df.cpp  dgamma.cpp  dgeom.cpp  dhyper.cpp  dlnorm.cpp  dlogis.cpp  dnbeta.cpp  dnbinom.cpp  dnchisq.cpp  dnf.cpp  dnorm.cpp  dnt.cpp  dpois.cpp  dt.cpp  dunif.cpp  dweibull.cpp  exponential.cpp  fdist.cpp  (+79 more)
src/Random/: rng.cpp
